GS-12118: Fixed text-box and sign up button alignment bug in chrome.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -4394,9 +4394,16 @@ a.ui-dialog-titlebar-close .ui-icon {
     color: #999999;
     width: 211px;
     height: 17px;
+
 }
 
-/*GS-12118 ends*/
+.nlEmail{
+    margin-right: 10px;
+}
+
+.chrome .nlEmail{
+    margin-right: 8px;
+}
 
 /* GS-11161 */
 #joinHover .introTxt span.title {
